--- a/Source/SchoolMaster/.gitignore
+++ b/Source/SchoolMaster/.gitignore
@@ -228,6 +228,7 @@ ClientBin/
 *.jfm
 *.pfx
 *.publishsettings
+*.refactorlog
 orleans.codegen.cs
 
 # Including strong name files can present a security risk
