--- a/Source/SchoolMaster/WebAPI/appsettings.json
+++ b/Source/SchoolMaster/WebAPI/appsettings.json
@@ -1,10 +1,30 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "AllowedHosts": "*",
+
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Information",
+                "System": "Information"
+            }
+        },
+        "Enrich": [ "FromLogContext" ],
+        "WriteTo": [
+            { "Name": "Console" },
+            { "Name": "Debug" },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "%TMP%/Logs/Serilog-.json",
+                    "rollingInterval": "Day",
+                    "shared": true
+                }
+            }
+        ],
+        "Properties": {
+            "Application": "School Master"
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
