SM-9 - Added support for health checks and Swagger.

--- a/Source/SchoolMaster/WebAPI/appsettings.json
+++ b/Source/SchoolMaster/WebAPI/appsettings.json
@@ -4,10 +4,10 @@
     "Serilog": {
         "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
         "MinimumLevel": {
-            "Default": "Debug",
+            "Default": "Information",
             "Override": {
-                "Microsoft": "Information",
-                "System": "Information"
+                "Microsoft": "Warning",
+                "System": "Warning"
             }
         },
         "Enrich": [ "FromLogContext" ],
@@ -26,5 +26,8 @@
         "Properties": {
             "Application": "School Master"
         }
+    },
+    "SQL": {
+        "connectString": "Server=<ServerName>;User ID=<UserID>;Password=<Password>;Initial Catalog=SchoolMaster;MultipleActiveResultSets=true;ConnectRetryCount=5"
     }
 }
