--- a/Source/SchoolMaster/WebAPI.Tests/WebAPI.Tests.csproj
+++ b/Source/SchoolMaster/WebAPI.Tests/WebAPI.Tests.csproj
@@ -27,6 +27,8 @@
     <PackageReference Include="AutoFixture.AutoFakeItEasy" Version="4.15.0" />
     <PackageReference Include="AutoFixture.Xunit2" Version="4.15.0" />
     <PackageReference Include="FakeItEasy" Version="6.2.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.8.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
