--- a/Source/SchoolMaster/WebAPI/Properties/launchSettings.json
+++ b/Source/SchoolMaster/WebAPI/Properties/launchSettings.json
@@ -12,6 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "health",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
