--- a/Source/SchoolMaster/WebAPI/appsettings.Development.json
+++ b/Source/SchoolMaster/WebAPI/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Information",
+                "System": "Information"
+            }
+        }
+    },
+    "SQL": {
+        "connectString": "Server=CGUYOTT03;User ID=sa;Password=letM3Get$In2;Initial Catalog=SchoolMaster;MultipleActiveResultSets=true;ConnectRetryCount=5"
     }
-  }
 }
