--- a/Source/SchoolMaster/WebAPI.Tests/WebAPI.Tests.csproj
+++ b/Source/SchoolMaster/WebAPI.Tests/WebAPI.Tests.csproj
@@ -45,4 +45,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
+  </ItemGroup>
+
 </Project>
