--- a/Source/SchoolMaster/WebAPI.Tests/WebAPI.Tests.csproj
+++ b/Source/SchoolMaster/WebAPI.Tests/WebAPI.Tests.csproj
@@ -9,18 +9,21 @@
     <Product>School Master</Product>
     <Copyright>Copyright © 2021 Briarwood Consulting</Copyright>
     <NeutralLanguage>en-US</NeutralLanguage>
+	<EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisLevel>5.0</AnalysisLevel>
+	<LangVersion>latest</LangVersion>
+	<AnalysisMode>AllEnabledByDefault</AnalysisMode>
+	<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <OutputPath>bin\Debug\netcoreapp3.1\</OutputPath>
-    <DocumentationFile>bin\Debug\netcoreapp3.1\SchoolMaster.WebAPI.Tests.xml</DocumentationFile>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DocumentationFile>bin\Debug\SchoolMaster.WebAPI.Tests.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <OutputPath>bin\Release\netcoreapp3.1\</OutputPath>
-    <DocumentationFile>bin\Release\netcoreapp3.1\SchoolMaster.WebAPI.Tests.xml</DocumentationFile>
+    <OutputPath>bin\Release\</OutputPath>
+    <DocumentationFile>bin\Release\SchoolMaster.WebAPI.Tests.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
